Fix : Order button spacing issue for old users

--- a/assets/css/unminified/compatibility/woocommerce/woocommerce.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce.css
@@ -3100,6 +3100,27 @@ p.demo_store[data-position="bottom"],
   border-top: 1px solid var(--ast-border-color);
 }
 
+.woocommerce table.shop_table td.woocommerce-orders-table__cell-order-actions, .woocommerce table.shop_table td.download-file,
+.woocommerce-page table.shop_table td.woocommerce-orders-table__cell-order-actions,
+.woocommerce-page table.shop_table td.download-file {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.woocommerce table.shop_table td.woocommerce-orders-table__cell-order-actions a, .woocommerce table.shop_table td.download-file a,
+.woocommerce-page table.shop_table td.woocommerce-orders-table__cell-order-actions a,
+.woocommerce-page table.shop_table td.download-file a {
+  margin-right: 0.5em;
+  margin-top: 0.25em;
+  margin-bottom: 0.25em;
+}
+
+.woocommerce table.shop_table td.woocommerce-orders-table__cell-order-actions a:nth-last-child(1), .woocommerce table.shop_table td.download-file a:nth-last-child(1),
+.woocommerce-page table.shop_table td.woocommerce-orders-table__cell-order-actions a:nth-last-child(1),
+.woocommerce-page table.shop_table td.download-file a:nth-last-child(1) {
+  margin-right: 0;
+}
+
 .woocommerce table.shop_table .woocommerce-Price-amount,
 .woocommerce-page table.shop_table .woocommerce-Price-amount {
   font-weight: 400;
